fix logo flickering

--- a/src/styles/components/navbar.module.scss
+++ b/src/styles/components/navbar.module.scss
@@ -24,5 +24,12 @@
 
     .navBar__logo {
         margin: 0 20px;
+        width: 97px;
+        height: 80px;
+
+        @media (min-width: 576px) {
+            width: 146px;
+            height: 120px;
+        }
     }
 }
